fix spacing :hammer:
applied feedback to evenly space button vertically

--- a/styles.css
+++ b/styles.css
@@ -58,7 +58,8 @@ h1 {
     font-size: 48px;
     color: var(--brown);
     text-align: center;
-    padding: 20px;
+    padding: 50px 0 25px;
+    margin: 0;
 }
 
 .description {
@@ -144,7 +145,7 @@ video {
     border: none;
     border-radius: 5px;
     padding: 6px 10px;
-    margin: 10px;
+    margin: 25px;
     cursor: pointer;
 }
 
